Updated sticky header & fixed vertical scroll over overflow issue

--- a/src/index.css
+++ b/src/index.css
@@ -1,7 +1,7 @@
 * {
   margin: 0;
   padding: 0;
-  overflow-x: hidden;
+  overflow-x: clip;
 }
 
 @font-face {
@@ -61,4 +61,11 @@
 }
 h6 {
   cursor: pointer;
+}
+.fixed-top {
+  position: fixed;
+  top: 0;
+  width: 100%;
+  z-index: 1000;
+  background-color: white;
 }
